# m3-loan-default

./: .gitignore  README.md  STATE.md  pyproject.toml
docs/: cli-demo.txt  metrics.json
notebooks/: 01_demo.ipynb
scripts/: run_pipeline.py
src/m3_loan_default/: __init__.py  data.py  explain.py  model.py
tests/: test_data.py  test_explain.py  test_model.py  test_smoke.py
