[project]
name = "m3-loan-default"
version = "0.1.0"
description = "Yash Patel - Finance Project: M3 Loan Default Predictor"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "xgboost>=2.1",
    "shap>=0.46",
    "matplotlib>=3.9",
    "openpyxl>=3.1",
    "xlrd>=2.0",
    "requests>=2.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "jupyter>=1.0",
    "ipykernel>=6.29",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
